--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ readme = "README.md"
 python = "^3.10"
 openai = "^1.52.2"
 python-dotenv = "^1.0.1"
+nltk = "^3.9.1"
+sqlparse = "^0.5.1"
 
 
 [build-system]
